--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 flask==2.0.1
-tensorflow==2.8.0
+tensorflow==2.13.0  # Cambiado de 2.8.0 a una versión disponible en Render
 pandas==1.3.4
 numpy==1.21.4
 scikit-learn==1.0.1
