--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-flask==2.0.1
-tensorflow==2.13.0  # Cambiado de 2.8.0 a una versión disponible en Render
-pandas==1.3.4
-numpy==1.21.4
-scikit-learn==1.0.1
-pickle-mixin==1.0.2
-gunicorn==20.1.0
+flask>=2.0.1
+tensorflow>=2.12.0
+pandas>=1.3.0
+numpy>=1.22.0
+scikit-learn>=1.0.0
+pickle-mixin>=1.0.2
+gunicorn>=20.1.0
