--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-flask>=2.0.1
-tensorflow>=2.12.0
-pandas>=1.3.0
-numpy>=1.22.0
-scikit-learn>=1.0.0
-pickle-mixin>=1.0.2
-gunicorn>=20.1.0
+flask==3.0.3
+flask-cors==4.0.1
+gunicorn==23.0.0
+tensorflow==2.12.0
+pandas==2.0.3
+numpy==1.24.3
+scikit-learn==1.3.2
